Implemented security
