# src/main/java/ua/shtaiier/phonecontacts/dto/AccountDto.java
@@ -1,0 +1,11 @@
+package ua.shtaiier.phonecontacts.dto;
+
+import lombok.Data;
+
+@Data
+public class AccountDto {
+
+    private String username;
+    private String password;
+
+}
